# graduate_work

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
admin_service/: Dockerfile  Pipfile  entrypoint.sh  manage.py  pyproject.toml
admin_service/config/: settings.py  urls.py
admin_service/config/components/: database.py  installed_apps.py  middleware.py
admin_service/movies/: admin.py  apps.py  models.py
admin_service/movies/api/: urls.py
admin_service/movies/migrations/: 0001_initial.py
admin_service/sqlite_to_postgres/: enums.py  errors.py  helpers.py  load_data.py  models.py  settings.py
auth_service/: Dockerfile  pyproject.toml
auth_service/src/: celery_config.py  entry.sh  main.py  scripts.py
auth_service/src/core/: config.py  (+3 more)
auth_service/tests/: conftest.py
etl_elastic/: Dockerfile  pyproject.toml
etl_elastic/src/: config.py  entrypoint.sh  main.py
film_service/: Dockerfile  Pipfile
film_service/src/: main.py
film_service/tests/: conftest.py
infra/: .env  docker-compose-dev.yml  docker-compose.yml
notification_service/: mypy.ini
notification_service/notification/: .env.dist  Dockerfile  docker-compose.yaml  requirements.txt  swagger_collection.json
notification_service/ws/: config.py  spam_user.py  ws_main.py
profiles-service/: Pipfile
profiles-service/config/: settings.py
profiles_service/: Dockerfile  Pipfile  entrypoint.sh  openapi_profiles_service.yaml  pytest.ini
profiles_service/config/: settings.py  urls.py
profiles_service/profiles/: admin.py  auth.py  config.py  models.py  profile_service.py  tests.py
profiles_service/services/: auth_service.py
profiles_service/uwsgi/: uwsgi.ini
psql/: movies_database.sql
psql_to_es/: Dockerfile  Pipfile  etl.py  pyproject.toml
psql_to_es/etl/: transformer.py
psql_to_es/utils/: backoff.py  configs.py  factory.py  logger.py  state.py  storage.py
static/css/: login-register.css
templates/: index.html
ugc_etl/: Dockerfile  docker-compose.yml  etl.py  kafka_population.py  requirements.txt
ugc_service/: Dockerfile  requirements.txt
ugc_service/clickhouse-mongodb-compare/: config.py  requirements.txt
ugc_service/src/: main.py
(+200 files in other folders)
