[tool.poetry]
name = "etl-elastic"
version = "0.1.0"
description = ""
authors = ["Мария Шинкарева <mariia.shinkareva@playrix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.15"
elasticsearch = "^8.11.1"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
